[package]
name = "relay_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20 = "0.9.1"
clap = { version = "4.5.22", features = ["derive"] }
rand = "0.8.5"
secp256k1 = { version = "0.30.0", features = ["std", "rand"] }
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
